--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt-contrib-cssmin": "~0.13.0",
     "grunt-contrib-uglify": "~0.6.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-css2js": "^0.2.4",
     "grunt-html2js": "~0.3.3"
   }
 }
