--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,7 @@
     "ng-pageslide": "~0.1.8",
     "sortable": "~0.6.0",
     "ui-bootstrap": "~0.13.0",
-    "angular-bootstrap": "~0.13.1",
+    "angular-bootstrap": "~0.14.3",
     "angular-ui-router": "~0.2.15",
     "jquery": "~2.1.4",
     "angular-resizable": "~1.2.0",
@@ -39,7 +39,9 @@
     "angular-leaflet-directive": "~0.8.6",
     "angular-cookies": "~1.4.3",
     "ng-pageslide": "~1.0.4",
-    "angular-simple-logger": "~0.1.3"
+    "angular-simple-logger": "~0.1.4",
+    "ui-bootstrap": "~0.14.3",
+    "angular-bootstrap": "~0.14.3"
   },
   "authors": [
     "Jeremy Malczyk <jmalczyk@gmail.com>"
