--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,6 @@
   "homepage": "https://github.com/MapofLife/ng-mol",
   "license": "MIT",
   "dependencies": {
-    "mol-ui-components": "https://github.com/MapofLife/ui-components.git",
     "Leaflet.awesome-markers": "~2.0.2",
     "angular-bootstrap-checkbox": "~0.3.1",
     "Leaflet.utfgrid": "danzel/Leaflet.utfgrid",
@@ -20,28 +19,21 @@
     "ng-pageslide": "~0.1.8",
     "sortable": "~0.6.0",
     "ui-bootstrap": "~0.13.0",
-    "angular-bootstrap": "~0.14.3",
+    "angular-bootstrap": "~0.13.1",
     "angular-ui-router": "~0.2.15",
     "jquery": "~2.1.4",
-    "angular-resizable": "~1.2.0",
-    "angular-resource": "~1.4.6",
-    "angular-ui-select": "~0.12.1",
-    "angular-loading-bar": "~0.8.0",
-    "angular-simple-logger": "~0.1.3"
+    "angular-resizable": "~1.2.0"
   },
   "resolutions": {
     "d3": "~3.4.1",
-    "angular": "1.4.6",
+    "angular": "1.4.3",
     "angular-loading-bar": "~0.7.1",
     "font-awesome": "~4.3.x",
     "nvd3": "~v1.1.15-beta",
     "lodash": "~2.4.1",
     "angular-leaflet-directive": "~0.8.6",
     "angular-cookies": "~1.4.3",
-    "ng-pageslide": "~1.0.4",
-    "angular-simple-logger": "~0.1.4",
-    "ui-bootstrap": "~0.14.3",
-    "angular-bootstrap": "~0.14.3"
+    "ng-pageslide": "~1.0.4"
   },
   "authors": [
     "Jeremy Malczyk <jmalczyk@gmail.com>"
