--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "bower": "^1.3.1",
     "grunt": "~0.4.5",
     "grunt-angular-templates": "~0.5.7",
-    "grunt-contrib-cssmin": "~0.13.0",
-    "grunt-contrib-uglify": "~0.6.0",
+    "grunt-contrib-cssmin": "^0.13.0",
+    "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-css2js": "^0.2.4",
-    "grunt-html2js": "~0.3.3"
+    "grunt-html2js": "^0.3.6"
   }
 }
